--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,7 +14,7 @@ body, html {
 }
 
 .hero-section {
-    background-image: url('../images/simate.jpg'); /* Background image for hero section */
+    background-image: url('assets/images/Simate.jpg'); /* Background image for hero section */
     background-size: cover;
     background-position: center;
     height: 100vh;
